namespaces/browsergap/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  selector:
    matchLabels:
      app: main
  replicas: 1
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: dosyago/viewfinder-regular
