namespaces/browsergap/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  ports:
  - port: 8002
  selector:
    app: main
